--- a/Final_Group_U_Capstone_Project.ipynb
+++ b/Final_Group_U_Capstone_Project.ipynb
@@ -94,142 +94,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "GmIcES30IKRr",
-        "outputId": "0b897eb2-a861-40b0-e469-346f0f3cbc14"
+        "id": "GmIcES30IKRr"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting keras-tuner\n",
-            "  Downloading keras_tuner-1.4.7-py3-none-any.whl.metadata (5.4 kB)\n",
-            "Requirement already satisfied: keras in /usr/local/lib/python3.12/dist-packages (from keras-tuner) (3.10.0)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from keras-tuner) (25.0)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from keras-tuner) (2.32.4)\n",
-            "Collecting kt-legacy (from keras-tuner)\n",
-            "  Downloading kt_legacy-1.0.5-py3-none-any.whl.metadata (221 bytes)\n",
-            "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (1.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (2.0.2)\n",
-            "Requirement already satisfied: rich in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (13.9.4)\n",
-            "Requirement already satisfied: namex in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (0.1.0)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (3.15.1)\n",
-            "Requirement already satisfied: optree in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (0.17.0)\n",
-            "Requirement already satisfied: ml-dtypes in /usr/local/lib/python3.12/dist-packages (from keras->keras-tuner) (0.5.3)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests->keras-tuner) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests->keras-tuner) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests->keras-tuner) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests->keras-tuner) (2025.10.5)\n",
-            "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.12/dist-packages (from optree->keras->keras-tuner) (4.15.0)\n",
-            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras->keras-tuner) (4.0.0)\n",
-            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras->keras-tuner) (2.19.2)\n",
-            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras->keras-tuner) (0.1.2)\n",
-            "Downloading keras_tuner-1.4.7-py3-none-any.whl (129 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading kt_legacy-1.0.5-py3-none-any.whl (9.6 kB)\n",
-            "Installing collected packages: kt-legacy, keras-tuner\n",
-            "Successfully installed keras-tuner-1.4.7 kt-legacy-1.0.5\n",
-            "Found existing installation: protobuf 5.29.5\n",
-            "Uninstalling protobuf-5.29.5:\n",
-            "  Successfully uninstalled protobuf-5.29.5\n",
-            "\u001b[33mWARNING: Skipping tf2onnx as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Skipping onnx as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0mCollecting protobuf==3.20.3\n",
-            "  Downloading protobuf-3.20.3-py2.py3-none-any.whl.metadata (720 bytes)\n",
-            "Downloading protobuf-3.20.3-py2.py3-none-any.whl (162 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: protobuf\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, but you have protobuf 3.20.3 which is incompatible.\n",
-            "tensorflow-metadata 1.17.2 requires protobuf>=4.25.2; python_version >= \"3.11\", but you have protobuf 3.20.3 which is incompatible.\n",
-            "opentelemetry-proto 1.37.0 requires protobuf<7.0,>=5.0, but you have protobuf 3.20.3 which is incompatible.\n",
-            "grpcio-status 1.71.2 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 3.20.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed protobuf-3.20.3\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "google"
-                ]
-              },
-              "id": "6e39f27f6eb8400582617ada14bb1c8c"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting tf2onnx==1.15.1\n",
-            "  Downloading tf2onnx-1.15.1-py3-none-any.whl.metadata (1.2 kB)\n",
-            "Requirement already satisfied: numpy>=1.14.1 in /usr/local/lib/python3.12/dist-packages (from tf2onnx==1.15.1) (2.0.2)\n",
-            "Collecting onnx>=1.4.1 (from tf2onnx==1.15.1)\n",
-            "  Downloading onnx-1.19.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (7.0 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from tf2onnx==1.15.1) (2.32.4)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.12/dist-packages (from tf2onnx==1.15.1) (1.17.0)\n",
-            "Requirement already satisfied: flatbuffers>=1.12 in /usr/local/lib/python3.12/dist-packages (from tf2onnx==1.15.1) (25.9.23)\n",
-            "Requirement already satisfied: protobuf~=3.20.2 in /usr/local/lib/python3.12/dist-packages (from tf2onnx==1.15.1) (3.20.3)\n",
-            "INFO: pip is looking at multiple versions of onnx to determine which version is compatible with other requirements. This could take a while.\n",
-            "  Downloading onnx-1.19.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (7.0 kB)\n",
-            "  Downloading onnx-1.18.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.9 kB)\n",
-            "  Downloading onnx-1.17.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (16 kB)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests->tf2onnx==1.15.1) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests->tf2onnx==1.15.1) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests->tf2onnx==1.15.1) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests->tf2onnx==1.15.1) (2025.10.5)\n",
-            "Downloading tf2onnx-1.15.1-py3-none-any.whl (454 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m454.7/454.7 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading onnx-1.17.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.0/16.0 MB\u001b[0m \u001b[31m126.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: onnx, tf2onnx\n",
-            "Successfully installed onnx-1.17.0 tf2onnx-1.15.1\n",
-            "Collecting onnx==1.14.1\n",
-            "  Downloading onnx-1.14.1.tar.gz (11.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m122.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Installing backend dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from onnx==1.14.1) (2.0.2)\n",
-            "Requirement already satisfied: protobuf>=3.20.2 in /usr/local/lib/python3.12/dist-packages (from onnx==1.14.1) (3.20.3)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.2.1 in /usr/local/lib/python3.12/dist-packages (from onnx==1.14.1) (4.15.0)\n",
-            "Building wheels for collected packages: onnx\n",
-            "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-            "  \n",
-            "  \u001b[31m×\u001b[0m \u001b[32mBuilding wheel for onnx \u001b[0m\u001b[1;32m(\u001b[0m\u001b[32mpyproject.toml\u001b[0m\u001b[1;32m)\u001b[0m did not run successfully.\n",
-            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-            "  \u001b[31m╰─>\u001b[0m See above for output.\n",
-            "  \n",
-            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-            "  Building wheel for onnx (pyproject.toml) ... \u001b[?25l\u001b[?25herror\n",
-            "\u001b[31m  ERROR: Failed building wheel for onnx\u001b[0m\u001b[31m\n",
-            "\u001b[0mFailed to build onnx\n",
-            "\u001b[31mERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (onnx)\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required tuner\n",
         "!pip install -q keras-tuner --upgrade\n",
         "\n",
         "# Uninstall conflicting packages (old / preinstalled versions)\n",
-        "!pip uninstall -y tensorflow tf2onnx onnx protobuf jax jaxlib\n",
-        "\n",
-        "# Install compatible, stable versions verified to work with DenseNet121 + ONNX export\n",
-        "!pip install -q tensorflow==2.16.1 tf2onnx==1.16.1 onnx==1.16.0 protobuf==3.20.3\n",
-        "\n",
+        "!pip uninstall -y tensorflow tf2onnx onnx protobuf jax jaxlib"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Install compatible, stable version of tensorflow verified to work with DenseNet121 + ONNX export\n",
+        "!pip install -q tensorflow==2.16.1"
+      ],
+      "metadata": {
+        "id": "PRhdnqdWdINk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Install compatible, stable version of tf2onnx verified to work with DenseNet121 + ONNX export\n",
+        "!pip install -q tf2onnx==1.16.1"
+      ],
+      "metadata": {
+        "id": "DEwskj9rdAVq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Install compatible, stable version of onnx verified to work with DenseNet121 + ONNX export\n",
+        "!pip install -q onnx==1.16.0"
+      ],
+      "metadata": {
+        "id": "K0PlPf8kdXk8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Install compatible, stable version of protobuf verified to work with DenseNet121 + ONNX export\n",
+        "!pip install -q protobuf==3.20.3"
+      ],
+      "metadata": {
+        "id": "VNK1P_e_dXQ-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Verify environment versions\n",
         "import tensorflow as tf, tf2onnx, onnx\n",
         "print(\"TensorFlow installed version:\", tf.__version__)\n",
@@ -244,6 +172,25 @@
         "# tf2onnx installed version: 1.16.1\n",
         "# ONNX installed version: 1.16.0\n",
         "# --------------------------------------------------------------"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KUqPjUxnc15r",
+        "outputId": "dfd9096b-caef-4549-95e7-1f15727c6095"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TensorFlow installed version: 2.16.1\n",
+            "tf2onnx Installed version: 1.16.1\n",
+            "ONNX installed version: 1.16.0\n"
+          ]
+        }
       ]
     },
     {
